# SP500_Historical_Portfolio_Returns

./: .gitignore  pyproject.toml
data/: SP500.tab  interest.tab
notebooks/: scratch.ipynb
returns/: analysis.py  base_models.py  bet_parameters.py  data.py  models.py  monthly_returns.py
tests/: test_insurance_class.py  test_kelly_model_class.py  test_model_class.py
